@@ -749,3 +749,6 @@ Changes only in Hortonworks github and not in hadoop-2.6.0 and hence not covered
     BUG-43966. YARN-4105. Capacity Scheduler headroom for DRF is wrong
     (Chang Li via jlowe)
 
+    BUG-46749. HDFS-7097. Allow block reports to be processed during
+    checkpointing on standby name node. (kihwal via wang)
+
