@@ -541,6 +541,15 @@ public class FSNamesystem implements Namesystem, FSClusterStats,
   private final FSNamesystemLock fsLock;
 
   /**
+   * Checkpoint lock to protect FSNamesystem modification on standby NNs.
+   * Unlike fsLock, it does not affect block updates. On active NNs, this lock
+   * does not provide proper protection, because there are operations that
+   * modify both block and name system state.  Even on standby, fsLock is
+   * used when block state changes need to be blocked.
+   */
+  private final ReentrantLock cpLock;
+
+  /**
    * Used when this NN is in standby state to read from the shared edit log.
    */
   private EditLogTailer editLogTailer = null;
@@ -815,6 +824,8 @@ public class FSNamesystem implements Namesystem, FSClusterStats,
     LOG.info("fsLock is fair:" + fair);
     fsLock = new FSNamesystemLock(fair);
     cond = fsLock.writeLock().newCondition();
+    cpLock = new ReentrantLock();
+
     this.fsImage = fsImage;
     try {
       resourceRecheckInterval = conf.getLong(
@@ -1614,6 +1625,22 @@ public class FSNamesystem implements Namesystem, FSClusterStats,
   public int getWriteHoldCount() {
     return this.fsLock.getWriteHoldCount();
   }
+
+  /** Lock the checkpoint lock */
+  public void cpLock() {
+    this.cpLock.lock();
+  }
+
+  /** Lock the checkpoint lock interrupibly */
+  public void cpLockInterruptibly() throws InterruptedException {
+    this.cpLock.lockInterruptibly();
+  }
+
+  /** Unlock the checkpoint lock */
+  public void cpUnlock() {
+    this.cpLock.unlock();
+  }
+
 
   NamespaceInfo getNamespaceInfo() {
     readLock();
@@ -5882,6 +5909,7 @@ public class FSNamesystem implements Namesystem, FSClusterStats,
       return; // Return previous response
     }
     boolean success = false;
+    cpLock();  // Block if a checkpointing is in progress on standby.
     readLock();
     try {
       checkOperation(OperationCategory.UNCHECKED);
@@ -5894,6 +5922,7 @@ public class FSNamesystem implements Namesystem, FSClusterStats,
       success = true;
     } finally {
       readUnlock();
+      cpUnlock();
       RetryCache.setState(cacheEntry, success);
     }
     LOG.info("New namespace image has been created");
@@ -5909,6 +5938,7 @@ public class FSNamesystem implements Namesystem, FSClusterStats,
       StandbyException {
     checkSuperuserPrivilege();
     checkOperation(OperationCategory.UNCHECKED);
+    cpLock();  // Block if a checkpointing is in progress on standby.
     writeLock();
     try {
       checkOperation(OperationCategory.UNCHECKED);
@@ -5923,6 +5953,7 @@ public class FSNamesystem implements Namesystem, FSClusterStats,
       return val;
     } finally {
       writeUnlock();
+      cpUnlock();
     }
   }
 
@@ -5933,12 +5964,14 @@ public class FSNamesystem implements Namesystem, FSClusterStats,
   void finalizeUpgrade() throws IOException {
     checkSuperuserPrivilege();
     checkOperation(OperationCategory.UNCHECKED);
+    cpLock();  // Block if a checkpointing is in progress on standby.
     writeLock();
     try {
       checkOperation(OperationCategory.UNCHECKED);
       getFSImage().finalizeUpgrade(this.isHaEnabled() && inActiveState());
     } finally {
       writeUnlock();
+      cpUnlock();
     }
   }
 
@@ -8447,6 +8480,11 @@ public class FSNamesystem implements Namesystem, FSClusterStats,
   @VisibleForTesting
   public ReentrantLock getLongReadLockForTests() {
     return fsLock.longReadLock;
+  }
+
+  @VisibleForTesting
+  public ReentrantLock getCpLockForTests() {
+    return cpLock;
   }
 
   @VisibleForTesting
